--- a/examples/style.css
+++ b/examples/style.css
@@ -1,6 +1,3 @@
-.selected {
-    background-color: #eee;
-}
 .completion {
     border: thin solid #aaa;
     display: inline-block;
@@ -8,11 +5,33 @@
     vertical-align: text-top;
     font-family: arial;
     font-size: 16px;
-    padding: 2px 4px;
+    padding: 2px;
 }
 .completion input {
     border: none;
     outline: none;
     font-family: arial;
     font-size: 16px;
+}
+
+.completion .item {
+    padding: 2px 4px;
+    margin: 2px;
+    border: thin solid #bbb;
+    background-color: #eee;
+    display: inline-block;
+}
+
+.completion .item .label {
+    margin-right: 3px;
+}
+
+.completion .item .remove {
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-image: url(remove.png);
+    display: inline-block;
+    height: 8px;
+    width: 8px;
+    cursor: pointer;
 }
