--- a/examples/style.css
+++ b/examples/style.css
@@ -12,6 +12,7 @@
     outline: none;
     font-family: arial;
     font-size: 16px;
+    font-family: "Courier New", Courier, monospace;
 }
 
 .completion .item {
