Removed check for touch screen and register both mouse and touch events all the time

--- a/examples/style.css
+++ b/examples/style.css
@@ -45,5 +45,6 @@
 
 .time-dropdown {
     max-height: 200px;
-    overflow-y: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 }
